cleaning stuff for the debian package

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,3 @@
-2009-02-28 Getting Things Gnome! 0.1
+2009-03-01 Getting Things Gnome! 0.0.9rc1
 
-	* First official release
+	* First official release 0.1rc1
