--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-06-01 Getting Things Gnome ! 0.1
+	* Bumping version number. First release of GTG
+
 2009-03-01 Getting Things Gnome! 0.0.9rc3
 	* pane/sidebar not saved
 
