Bug #339268 : typo in the title bar

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+    * Bug #339268 : typo in the title bar
+
 2009-06-01 Getting Things Gnome ! 0.1
 	* Bumping version number. First release of GTG
 
