--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+	- First unit tests by Carl Chenet
 	- Hotkeys goodness (patches from Antons Rebguns)
 	- Error, no crash if the XML file cannot be read (thanks Carl Chenet)
 	- http:// links now open in the browser
