Add Lucas to contributors, thank you Lucas

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@ For 0.2 :
 * Antons Rebguns  <arebgun@gmail.com>
 * Carl Chenet <chaica@ohmytux.com>
 * Jérôme Guelfucci <jerome.guelfucci@gmail.com>
+* Luca Falavigna <dktrkranz@ubuntu.com>
