Add Kale Persson in AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,10 +10,11 @@ The GTG Team:
 Thanks to the contributors
 ==========================
 
-For 0.2 :
---------
+For 0.1.1:
+----------
 * Gérôme Fournier <>
 * Antons Rebguns  <arebgun@gmail.com>
 * Carl Chenet <chaica@ohmytux.com>
 * Jérôme Guelfucci <jerome.guelfucci@gmail.com>
 * Luca Falavigna <dktrkranz@ubuntu.com>
+* Kalle Persson <kalle@kallepersson.se>
