--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ For 0.1.1:
 * Jérôme Guelfucci <jerome.guelfucci@gmail.com>
 * Luca Falavigna <dktrkranz@ubuntu.com>
 * Kalle Persson <kalle@kallepersson.se>
+* Jonathan Barnoud <jonathan@barnoud.net>
