Add wiki url in README + s/Gnome/GNOME/

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-====== Getting Things Gnome! ======
+====== Getting Things GNOME! ======
 
-Getting Things Gnome! (GTG) is a personal organizer for the GNOME desktop 
+Getting Things GNOME! (GTG) is a personal organizer for the GNOME desktop 
 environment inspired by the Getting Things Done (GTD) methodology. GTG is 
 designed with flexibility, adaptability, and ease of use in mind so it can be 
 used as more than just GTD software. 
@@ -58,4 +58,4 @@ Please refer to http://gtg.fritalk.com/pages/documentation
 
  * GTG Website: http://gtg.fritalk.com/
  * GTG project page on Launchpad: https://launchpad.net/gtg
- * GTG Wiki: not available yet
+ * GTG Wiki: http://live.gnome.org/gtg/
