Some modifications to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,8 +7,8 @@ The GTG Team:
 * Lionel Dricot <ploum@ploum.net>
 * Bertrand Rousseau <bertrand.rousseau@gmail.com>
 
-Thanks to the contributors
-==========================
+Thanks to the contributors!
+===========================
 
 For 0.1.1:
 ----------
