Some UI love for the sidebar and the tag icons, shamelessy copied from f-spot

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+        - Some UI love for the sidebar and the tag icons, shamelessy copied from f-spot
         - Shortcut for sidebar (F9): fixes bug #339710
 	- Support for i18n
 	- TaskSerial refactorization (by pitijo)
