--- a/locales/gtg.pot
+++ b/locales/gtg.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-03-28 00:24+0100\n"
+"POT-Creation-Date: 2009-04-01 11:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,11 +24,11 @@ msgstr ""
 msgid "<span weight=\"bold\">Starting on</span>"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:11
+#: GTG/taskeditor/taskeditor.glade.h:3
 msgid "Delete"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:12
+#: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/__init__.py:31
 msgid "Dismiss"
 msgstr ""
 
@@ -83,19 +83,15 @@ msgid "Was %s days ago"
 msgstr ""
 
 #: GTG/taskbrowser/__init__.py:29
-msgid "Mark as done2"
+msgid "Mark as done"
 msgstr ""
 
 #: GTG/taskbrowser/__init__.py:30
-msgid "Mark as not done2"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:31
-msgid "Dismiss2"
+msgid "Mark as not done"
 msgstr ""
 
 #: GTG/taskbrowser/__init__.py:32
-msgid "Undismiss2"
+msgid "Undismiss"
 msgstr ""
 
 #: GTG/taskbrowser/browser.py:107
@@ -110,7 +106,7 @@ msgstr ""
 msgid "Dismiss the selected task"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:110 GTG/taskbrowser/taskbrowser.glade.h:10
+#: GTG/taskbrowser/browser.py:110
 msgid "Create a new task"
 msgstr ""
 
@@ -118,197 +114,258 @@ msgstr ""
 msgid "Create a new subtask"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:713
+#: GTG/taskbrowser/browser.py:548
+msgid "monday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:548
+msgid "tuesday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:548
+msgid "wednesday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:549
+msgid "thursday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:549
+msgid "friday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:549
+msgid "saturday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:550
+msgid "sunday"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:559
+msgid "today"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:566
+msgid "tomorrow"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:627
+msgid "tags"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:630
+msgid "defer"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:634
+msgid "due"
+msgstr ""
+
+#: GTG/taskbrowser/browser.py:841
 msgid "(no active tasks)"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:715
+#: GTG/taskbrowser/browser.py:843
 msgid "(1 active task)"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1342 GTG/taskbrowser/browser.py:1413
+#: GTG/taskbrowser/browser.py:1473 GTG/taskbrowser/browser.py:1544
 msgid "Tags"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1357 GTG/taskbrowser/browser.py:1440
+#: GTG/taskbrowser/browser.py:1488 GTG/taskbrowser/browser.py:1571
 msgid "Title"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1376
+#: GTG/taskbrowser/browser.py:1507
 msgid "Due date"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1390
+#: GTG/taskbrowser/browser.py:1521
 msgid "Days left"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1428
+#: GTG/taskbrowser/browser.py:1559
 msgid "Closing date"
 msgstr ""
 
-#: GTG/taskbrowser/browser.py:1456
+#: GTG/taskbrowser/browser.py:1587
 msgid "Notes"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:1
+#: GTG/core/firstrun_tasks.py:6
+msgid "Getting started with GTG"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:7
+msgid "Welcome in Getting Things Gnome!, your new task manager."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:9
 msgid ""
-"\n"
-"Getting Things Gnome! is an organizer for the GNOME desktop environment."
+"In GTG, everything is a task. From building a bridge over the Pacific Ocean "
+"to changing a light bulb or organizing a party. When you edit a task, it is "
+"automatically saved."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:3
-msgid "&#xC0; propos de GTG!"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:4
+#: GTG/core/firstrun_tasks.py:11
 msgid ""
-"<span weight=\"bold\" size=\"large\">Are you sure you want delete this task?"
-"</span>\n"
-"\n"
-"Deleting a task cannot be undone."
+"Once a task is done, you can push the &quot;Mark as done&quot; button. If "
+"the task is not relevant any-more, simply press &quot;Dismiss&quot;."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:7
-msgid "Choose a color"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:8
-msgid "Confirm task deletion"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:9
-msgid "Copyrights&#xA9; 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:13
-msgid "Edit"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:14
-msgid "GTG website"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:15
-msgid "Getting Things Gnome!"
-msgstr ""
-
-#: GTG/taskbrowser/taskbrowser.glade.h:16
+#: GTG/core/firstrun_tasks.py:13
 msgid ""
-"Getting Things Gnome! is free software; you can redistribute it and/or "
-"modify it under the terms of the GNU General Public License as published by "
-"the Free Software Foundation; either version 3 of the License, or (at your "
-"option) any later version.\n"
-"\n"
-"Getting Things Gnome! is distributed in the hope that it will be useful, but "
-"WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY "
-"or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for "
-"more details.\n"
-"\n"
-"You should have received a copy of the GNU General Public License along with "
-"Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
-"51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
+"A task might be composed of multiple subtasks that appear as links in the "
+"description. Simply click on the following link :"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:21
-msgid "Mark as Done"
+#: GTG/core/firstrun_tasks.py:17
+msgid "Don't forget to mark this subtask as done !"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:22
-msgid "New Note"
+#: GTG/core/firstrun_tasks.py:19
+msgid "Other stuff you should read :"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:23
-msgid "New Subtask"
+#: GTG/core/firstrun_tasks.py:25
+msgid ""
+"We hope that you will appreciate GTG. Please send us bug reports and ideas "
+"for improvement using : "
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:24
-msgid "New Task"
+#: GTG/core/firstrun_tasks.py:28
+msgid "Thank you for trying out GTG :-)"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:25
-msgid "New _Task"
+#: GTG/core/firstrun_tasks.py:33
+msgid "Learn to use subtasks"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:26
-msgid "Permanently _remove task"
+#: GTG/core/firstrun_tasks.py:34
+msgid ""
+"In the task description (this window), if you begin a line with &quot;-"
+"&quot;, it will be considered as a &quot;subtask&quot;, something that needs "
+"to be done in order to accomplish your task. Just try to write &quot;- test "
+"subtask&quot; on the next line and press enter."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:27
-msgid "Redo"
+#: GTG/core/firstrun_tasks.py:36
+msgid "You can also use the &quot;insert subtask&quot; button."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:28
-msgid "Tag is displayed in the workview"
+#: GTG/core/firstrun_tasks.py:38
+msgid "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:29
-msgid "Undo"
+#: GTG/core/firstrun_tasks.py:40
+msgid ""
+"Some concept come with subtasks : for example, a subtask due date can never "
+"be after its parent due date."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:30
-msgid "View Notes"
+#: GTG/core/firstrun_tasks.py:42
+msgid "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:31
-msgid "Work View"
+#: GTG/core/firstrun_tasks.py:47
+msgid "Learn to use tags"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:32
-msgid "_Background Colors"
+#: GTG/core/firstrun_tasks.py:48
+msgid "A tag is a simple word that begin with &quot;@&quot;."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:33
-msgid "_Closed Tasks Pane"
+#: GTG/core/firstrun_tasks.py:50
+msgid "Try to type a word beginning with @ here :"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:34
-msgid "_Edit"
+#: GTG/core/firstrun_tasks.py:52
+msgid "It becomes yellow, it's a tag."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:35
-msgid "_File"
+#: GTG/core/firstrun_tasks.py:54
+msgid ""
+"Tags are useful to sort your tasks. In the view menu, you can enable a "
+"sidebar which displays all the tags you are using so you can easily see "
+"tasks for a given tag. There's no limit to the number of tags a task can "
+"have."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:36
-msgid "_Help"
+#: GTG/core/firstrun_tasks.py:56
+msgid ""
+"If you right click on a tag in the sidebar you can also set its color. It "
+"will permit you to have a more colorful list of tasks, if you want it that "
+"way."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:37
-msgid "_Keep selected task"
+#: GTG/core/firstrun_tasks.py:58
+msgid ""
+"A new tag is only added to the current task. There's no recursivity and the "
+"tag is not applied to subtasks. But when you create a new subtask, this "
+"subtask will inherit the tags of its parent as a good primary default (it "
+"will also be the case if you add a tag to a parent just after creating a "
+"subtask). Of course, you can modify at any time the tags of this particular "
+"subtask. It will never be changed by the parent."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:38
-msgid "_Quick Add Entry"
+#: GTG/core/firstrun_tasks.py:63
+msgid "Using the Workview"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:39
-msgid "_Tags Sidebar"
+#: GTG/core/firstrun_tasks.py:64
+msgid ""
+"If you press the &quot;Workview&quot; button, only actionable tasks will be "
+"displayed."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:40
-msgid "_Tasks"
+#: GTG/core/firstrun_tasks.py:66
+msgid "What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:41
-msgid "_View"
+#: GTG/core/firstrun_tasks.py:68
+msgid ""
+"It's a task that is already &quot;start-able&quot;, i.e. the start date is "
+"already over."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:42
-msgid "_Work View"
+#: GTG/core/firstrun_tasks.py:70
+msgid ""
+"It's a task that doesn't have open subtasks, i.e. you can do the task itself "
+"directly."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:43
-msgid "gtk-add"
+#: GTG/core/firstrun_tasks.py:72
+msgid "Thus, the workview will only show you tasks you should do right now."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:44
-msgid "gtk-cancel"
+#: GTG/core/firstrun_tasks.py:74
+msgid ""
+"If you use tags, you can right click on a tag in the sidebar and choose to "
+"not display tasks with this particular tag in the workview. It's very useful "
+"if you have a tag like &quot;someday&quot; that you use for tasks you would "
+"like to do but are not particularly urgent."
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:45
-msgid "gtk-help"
+#: GTG/core/firstrun_tasks.py:80
+msgid "Reporting bugs"
 msgstr ""
 
-#: GTG/taskbrowser/taskbrowser.glade.h:46
-msgid "gtk-ok"
+#: GTG/core/firstrun_tasks.py:81
+msgid ""
+"GTG is still very alpha software. We like it and use it everyday but you "
+"will encounter some bugs."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:83
+msgid ""
+"Please, report them ! We need you to make this software better. Any "
+"contribution, any idea is welcome."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:85
+msgid ""
+"If you have some trouble with GTG, we might be able to help you or to solve "
+"your problem really quickly."
 msgstr ""
