--- a/locales/gtg-fr.po
+++ b/locales/gtg-fr.po
@@ -1,12 +1,16 @@
-#, fuzzy
+# French translation for gtg
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the gtg package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: gtg\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-01 12:00+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-04-02 08:27+0000\n"
+"Last-Translator: Lionel Dricot <ploum@ploum.net>\n"
+"Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,11 +19,11 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:6
 msgid "Getting started with GTG"
-msgstr ""
+msgstr "Débuter avec GTG"
 
 #: GTG/core/firstrun_tasks.py:7
 msgid "Welcome in Getting Things Gnome!, your new task manager."
-msgstr ""
+msgstr "Bienvenue dans Getting Things Gnome!, votre gersionnaire de tâches."
 
 #: GTG/core/firstrun_tasks.py:9
 msgid ""
@@ -27,40 +31,50 @@ msgid ""
 "to changing a light bulb or organizing a party. When you edit a task, it is "
 "automatically saved."
 msgstr ""
+"Dans GTG, tout est une tâche. Que ce soit \"contruire un pont au-dessus de "
+"l'océan pacifique\", \"changer une ampoule\" ou \"organiser une fête\". "
+"Quand vous modifiez une tâche, elle est automatiquement sauvée."
 
 #: GTG/core/firstrun_tasks.py:11
 msgid ""
 "Once a task is done, you can push the &quot;Mark as done&quot; button. If "
 "the task is not relevant any-more, simply press &quot;Dismiss&quot;."
 msgstr ""
+"Une fois la tâche faite, vous pouvez appuyer sur le bouton &quot;Marquer "
+"comme fait&quot;. Si la tâche n'est plus d'actualité, appuyez simplement sur "
+"&quot;Abandonner&quot;."
 
 #: GTG/core/firstrun_tasks.py:13
 msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link :"
 msgstr ""
+"Une tâche peut être composée de multiples sous-tâches qui apparaissent comme "
+"liens dans la description. Cliquez simplement sur le lien suivant."
 
 #: GTG/core/firstrun_tasks.py:17
 msgid "Don't forget to mark this subtask as done !"
-msgstr ""
+msgstr "N'oubliez pas de marquer cette sous-tâche comme faite !"
 
 #: GTG/core/firstrun_tasks.py:19
 msgid "Other stuff you should read :"
-msgstr ""
+msgstr "Autres sujets d'intérêt :"
 
 #: GTG/core/firstrun_tasks.py:25
 msgid ""
 "We hope that you will appreciate GTG. Please send us bug reports and ideas "
 "for improvement using : "
 msgstr ""
+"Nous espérons que vous apprécierez GTG. Veuillez reporter bogues et idées "
+"d'améliorations en utilisant : "
 
 #: GTG/core/firstrun_tasks.py:28
 msgid "Thank you for trying out GTG :-)"
-msgstr ""
+msgstr "Merci d'avoir essayé GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:33
 msgid "Learn to use subtasks"
-msgstr ""
+msgstr "Apprendre à utiliser les sous-tâches"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid ""
@@ -69,41 +83,53 @@ msgid ""
 "to be done in order to accomplish your task. Just try to write &quot;- test "
 "subtask&quot; on the next line and press enter."
 msgstr ""
+"Dans la description de la tâche (cette fenêtre), si vous commencez une ligne "
+"avec  &quot;-&quot;, elle sera considérée comme &quot;sous-tâche&quot;, "
+"quelque chose à faire pour accomplir votre tâche. Essayez d'écrire &quot;- "
+"test sous-tâche&quot; dans la ligne suivante et appuyer sur Entrer."
 
 #: GTG/core/firstrun_tasks.py:36
 msgid "You can also use the &quot;insert subtask&quot; button."
 msgstr ""
+"Vous pouvez utiliser aussi le bouton  &quot;Ajouter une sous-tâche&quot;."
 
 #: GTG/core/firstrun_tasks.py:38
 msgid ""
 "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
 msgstr ""
+"Les tâches et les sous-tâches se réorganisent en faisant du glisser-déposer "
+"dans la liste des tâches."
 
 #: GTG/core/firstrun_tasks.py:40
 msgid ""
 "Some concept come with subtasks : for example, a subtask due date can never "
 "be after its parent due date."
 msgstr ""
+"Quelques concepts découlent logiquement des sous-tâches : par exemple, "
+"l'échéance d'une sous-tâche ne peut jamais être après l'échéance de sa tâche "
+"parente."
 
 #: GTG/core/firstrun_tasks.py:42
 msgid "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Également, marquer une tâche parent comme faîte entraînera le marquage comme "
+"faites des sous-tâches."
 
 #: GTG/core/firstrun_tasks.py:47
 msgid "Learn to use tags"
-msgstr ""
+msgstr "Apprendre à utiliser les étiquettes"
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "A tag is a simple word that begin with &quot;@&quot;."
-msgstr ""
+msgstr "Une étiquette est un mot commençant par le caractère &quot;@&quot;."
 
 #: GTG/core/firstrun_tasks.py:50
 msgid "Try to type a word beginning with @ here :"
-msgstr ""
+msgstr "Essayez de taper un mot commençant par @ ici :"
 
 #: GTG/core/firstrun_tasks.py:52
 msgid "It becomes yellow, it's a tag."
-msgstr ""
+msgstr "Il devient jaune, c'est une étiquette."
 
 #: GTG/core/firstrun_tasks.py:54
 msgid ""
@@ -112,6 +138,11 @@ msgid ""
 "tasks for a given tag. There's no limit to the number of tags a task can "
 "have."
 msgstr ""
+"Les étiquettes sont utiles pour classer vos tâches. Dans le menu 'Vue', vous "
+"pouvez activer l'affichage d'un panneau latéral qui affiche toutes les "
+"étiquettes que vous utilisez. De cette façon vous pouvez facilement voir les "
+"tâches qui se rapportent à une certaine étiquette. Il n'y a pas de limites "
+"au nombre d'étiquettes qu'une tâche peut avoir."
 
 #: GTG/core/firstrun_tasks.py:56
 msgid ""
@@ -119,6 +150,9 @@ msgid ""
 "will permit you to have a more colorful list of tasks, if you want it that "
 "way."
 msgstr ""
+"Si vous cliquez sur une étiquette dans le panneau latéral, vous pouvez aussi "
+"lui donner une certaine couleur. Cela vous permet d'obtenir une liste plus "
+"colorée de tâche, si le préférez."
 
 #: GTG/core/firstrun_tasks.py:58
 msgid ""
@@ -129,37 +163,53 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Une nouvelle étiquette n'est toujours ajoutée qu'à la tâche courante. Il n'y "
+"a pas de récursivité, l'étiquette n'est pas appliquée aux sous-tâches. Mais "
+"lorsque vous créez une nouvelle sous-tâches, celle-ci héritera des "
+"étiquettes de son parent par défaut (ce sera aussi le cas si vous ajoutez "
+"une étiquette à un parent après avoir créé une sous-tâche). Evidemment, vous "
+"pouvez modifier les étiquettes d'une sous-tâche en particulier à tout "
+"moment. Cela ne changera rien à la tâche parente."
 
 #: GTG/core/firstrun_tasks.py:63
 msgid "Using the Workview"
-msgstr ""
+msgstr "En utilisant la vue de travail"
 
 #: GTG/core/firstrun_tasks.py:64
 msgid ""
 "If you press the &quot;Workview&quot; button, only actionable tasks will be "
 "displayed."
 msgstr ""
+"Si vous pressez le boutont &quot;Vue de travail&quot;, seules les actions "
+"réalisables seront affichées."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid ""
 "What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
+"Qu'est-ce qu'une tâche réalisable? Une tâche que vous pouvez faire "
+"directement, maintenant,"
 
 #: GTG/core/firstrun_tasks.py:68
 msgid ""
 "It's a task that is already &quot;start-able&quot;, i.e. the start date is "
 "already over."
 msgstr ""
+"C'est une tâche qui peut être commencée: sa date de début est déja dépassée."
 
 #: GTG/core/firstrun_tasks.py:70
 msgid ""
 "It's a task that doesn't have open subtasks, i.e. you can do the task itself "
 "directly."
 msgstr ""
+"C'est une tâche qui n'a pas de sous-tâches actives, vous pouvez la faire "
+"directement."
 
 #: GTG/core/firstrun_tasks.py:72
 msgid "Thus, the workview will only show you tasks you should do right now."
 msgstr ""
+"Donc la vue de travail ne vous montreras que les tâches que vous pouvez "
+"faire maintenant."
 
 #: GTG/core/firstrun_tasks.py:74
 msgid ""
@@ -168,93 +218,108 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Si vous utilisez les étiquettes, vous pouvez faire un clic droit sur un "
+"étiquette dans le panneau latéral et choisir de ne pas afficher les tâches "
+"avec cette étiquette dans la vue de travail. C'est très utile si vous avez "
+"une étiquette comme &quot;Un jour peut-être&quot; que vous utilisez pour les "
+"tâches qui ne sont pas particulièrement urgentes."
 
 #: GTG/core/firstrun_tasks.py:80
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Rapporter les bugs"
 
 #: GTG/core/firstrun_tasks.py:81
 msgid ""
 "GTG is still very alpha software. We like it and use it everyday but you "
 "will encounter some bugs."
 msgstr ""
+"GTG est encore un logiciel immature. Nous l'apprécions et l'utilisons tous "
+"les jours mais vous risquez certainement de rencontrer des bugs."
 
 #: GTG/core/firstrun_tasks.py:83
 msgid ""
 "Please, report them ! We need you to make this software better. Any "
 "contribution, any idea is welcome."
 msgstr ""
+"S'il vous plaît, rapportez-les nous ! Nous avons besoin de vos retours pour "
+"rendre ce logiciel meilleur. Toute contribution, toute idée d'amélioration "
+"est la bienvenue."
 
 #: GTG/core/firstrun_tasks.py:85
 msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"Si vous avez un problème avec GTG, nous pouvons peut-être vous aider ou "
+"résoudre votre problème rapidement."
 
 #: GTG/taskeditor/editor.py:208
 msgid "Due tomorrow !"
-msgstr ""
+msgstr "Pour demain!"
 
 #: GTG/taskeditor/editor.py:210
 #, python-format
 msgid "%s days left"
-msgstr ""
+msgstr "Il reste %s jours"
 
 #: GTG/taskeditor/editor.py:212
 msgid "Due today !"
-msgstr ""
+msgstr "Pour aujourd'hui!"
 
 #: GTG/taskeditor/editor.py:214
 msgid "Due for yesterday"
-msgstr ""
+msgstr "Dépassé depuis hier"
 
 #: GTG/taskeditor/editor.py:216
 #, python-format
 msgid "Was %s days ago"
-msgstr ""
+msgstr "Dépassé depuis %s jours"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "<span weight=\"bold\">Due for</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">A terminer pour</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:2
 msgid "<span weight=\"bold\">Starting on</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Commence le</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
 msgid "Delete"
-msgstr ""
+msgstr "Supprimer"
 
 #: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
 msgid "Dismiss"
-msgstr ""
+msgstr "Abandonner"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
-msgstr ""
+msgstr "Ajouter une sous-tâche"
 
 #: GTG/taskeditor/taskeditor.glade.h:6
 msgid "Insert tag"
-msgstr ""
+msgstr "Ajouter une étiquette"
 
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Keep as Note"
-msgstr ""
+msgstr "Conserver comme note"
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr ""
+msgstr "Marquer comme fait"
 
 #: GTG/taskeditor/taskeditor.glade.h:9
 msgid "Task"
-msgstr ""
+msgstr "Tâche"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
 "\n"
 "Getting Things Gnome! is an organizer for the GNOME desktop environment."
 msgstr ""
+"\n"
+"Getting Things GNOME! est un outil d'organisation personnel pour "
+"l'environnement de bureau GNOME."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
@@ -263,42 +328,46 @@ msgid ""
 "\n"
 "Deleting a task cannot be undone."
 msgstr ""
+"<span weight=\"bold\" size=\"large\">Êtes-vous certain de vouloir supprimer "
+"cette tâche ?</span>\n"
+"\n"
+"La suppression d'une tâche ne peut pas être annulée."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "About GTG!"
-msgstr ""
+msgstr "À propos de GTG"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Choose a color"
-msgstr ""
+msgstr "Choisissez une couleur"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:8
 msgid "Confirm task deletion"
-msgstr ""
+msgstr "Confirmer la suppression de la tâche"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:9
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
 msgid "Create a new task"
-msgstr ""
+msgstr "Créer une nouvelle tâche"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
-msgstr ""
+msgstr "_Abandonner"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
-msgstr ""
+msgstr "Éditer"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:15
 msgid "GTG website"
-msgstr ""
+msgstr "Site web de GTG"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:16
 msgid "Getting Things Gnome!"
-msgstr ""
+msgstr "Getting Things Gnome!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:17
 msgid ""
@@ -319,237 +388,237 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:22
 msgid "Mark as Done"
-msgstr ""
+msgstr "Marquer comme fait"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:23
 msgid "Mark as Not Done"
-msgstr ""
+msgstr "Marquer comme non fait"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:24
 msgid "Mark as _Done"
-msgstr ""
+msgstr "Marquer comme _fait"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:25
 msgid "New Note"
-msgstr ""
+msgstr "Nouvelle note"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:26
 msgid "New Subtask"
-msgstr ""
+msgstr "Nouvelle tâche enfant"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:27
 msgid "New Task"
-msgstr ""
+msgstr "Nouvelle tâche"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "New _Subtask"
-msgstr ""
+msgstr "Nouvelle tâche _enfant"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:29
 msgid "New _Task"
-msgstr ""
+msgstr "Nouvelle _tâche"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:30
 msgid "Permanently _remove task"
-msgstr ""
+msgstr "Supprimer la tâche définitivement"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:31
 msgid "Redo"
-msgstr ""
+msgstr "Refaire"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:32
 msgid "Tag is displayed in the workview"
-msgstr ""
+msgstr "Afficher l'étiquette dans la vue de travail"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
 #: GTG/taskbrowser/browser.py:1548
 msgid "Tags"
-msgstr ""
+msgstr "Étiquettes"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
-msgstr ""
+msgstr "Annuler l'a_bandon"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:35
 msgid "Undo"
-msgstr ""
+msgstr "Annuler"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:36
 msgid "View Notes"
-msgstr ""
+msgstr "Voir les notes"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:37
 msgid "Work View"
-msgstr ""
+msgstr "Vue de travail"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:38
 msgid "_Background Colors"
-msgstr ""
+msgstr "Couleur de _fond"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:39
 msgid "_Closed Tasks Pane"
-msgstr ""
+msgstr "Panneau des tâches _cloturées"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:40
 msgid "_Edit"
-msgstr ""
+msgstr "É_dition"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:41
 msgid "_File"
-msgstr ""
+msgstr "_Fichier"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:42
 msgid "_Help"
-msgstr ""
+msgstr "Aid_e"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Keep selected task"
-msgstr ""
+msgstr "_Conserver la tâche sélectionnée"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:44
 msgid "_Quick Add Entry"
-msgstr ""
+msgstr "Entrée d'_ajout rapide"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:45
 msgid "_Tags Sidebar"
-msgstr ""
+msgstr "Panneau latéral d'étiquettes"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:46
 msgid "_Tasks"
-msgstr ""
+msgstr "_Tâches"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:47
 msgid "_View"
-msgstr ""
+msgstr "_Vue"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
 msgid "_Work View"
-msgstr ""
+msgstr "Vue de _travail"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
 msgid "gtk-add"
-msgstr ""
+msgstr "gtk-add"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:50
 msgid "gtk-cancel"
-msgstr ""
+msgstr "gtk-cancel"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:51
 msgid "gtk-help"
-msgstr ""
+msgstr "gtk-help"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:52
 msgid "gtk-ok"
-msgstr ""
+msgstr "gtk-ok"
 
 #: GTG/taskbrowser/browser.py:107
 msgid "Mark the selected task as done"
-msgstr ""
+msgstr "Marquer la tâche sélectionnée comme faite"
 
 #: GTG/taskbrowser/browser.py:108
 msgid "Edit the selected task"
-msgstr ""
+msgstr "Éditer la tâche sélectionée"
 
 #: GTG/taskbrowser/browser.py:109
 msgid "Dismiss the selected task"
-msgstr ""
+msgstr "Abandonner la tâche sélectionnée"
 
 #: GTG/taskbrowser/browser.py:111
 msgid "Create a new subtask"
-msgstr ""
+msgstr "Créer une nouvelle tâche enfant"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "monday"
-msgstr ""
+msgstr "lundi"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "tuesday"
-msgstr ""
+msgstr "mardi"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "wednesday"
-msgstr ""
+msgstr "mercredi"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "thursday"
-msgstr ""
+msgstr "jeudi"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "friday"
-msgstr ""
+msgstr "vendredi"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "saturday"
-msgstr ""
+msgstr "samedi"
 
 #: GTG/taskbrowser/browser.py:554
 msgid "sunday"
-msgstr ""
+msgstr "dimanche"
 
 #: GTG/taskbrowser/browser.py:563
 msgid "today"
-msgstr ""
+msgstr "aujourd'hui"
 
 #: GTG/taskbrowser/browser.py:570
 msgid "tomorrow"
-msgstr ""
+msgstr "demain"
 
 #: GTG/taskbrowser/browser.py:631
 msgid "tags"
-msgstr ""
+msgstr "tags"
 
 #: GTG/taskbrowser/browser.py:634
 msgid "defer"
-msgstr ""
+msgstr "reporter"
 
 #: GTG/taskbrowser/browser.py:638
 msgid "due"
-msgstr ""
+msgstr "échéance"
 
 #: GTG/taskbrowser/browser.py:749
 msgid "<span weight=\"bold\">All tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Toutes les étiquettes</span>"
 
 #: GTG/taskbrowser/browser.py:750
 msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Tâches sans étiquette</span>"
 
 #: GTG/taskbrowser/browser.py:845
 msgid "(no active tasks)"
-msgstr ""
+msgstr "(pas de tâche active)"
 
 #: GTG/taskbrowser/browser.py:847
 msgid "(1 active task)"
-msgstr ""
+msgstr "(1 tâche active)"
 
 #: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
 msgid "Title"
-msgstr ""
+msgstr "Titre"
 
 #: GTG/taskbrowser/browser.py:1511
 msgid "Due date"
-msgstr ""
+msgstr "Date de fin"
 
 #: GTG/taskbrowser/browser.py:1525
 msgid "Days left"
-msgstr ""
+msgstr "Jours restants"
 
 #: GTG/taskbrowser/browser.py:1563
 msgid "Closing date"
-msgstr ""
+msgstr "Date de cloture"
 
 #: GTG/taskbrowser/browser.py:1591
 msgid "Notes"
-msgstr ""
+msgstr "Notes"
 
 #: GTG/taskbrowser/__init__.py:29
 msgid "Mark as done"
-msgstr ""
+msgstr "Marquer comme fait"
 
 #: GTG/taskbrowser/__init__.py:30
 msgid "Mark as not done"
-msgstr ""
+msgstr "Marquer comme non fait"
 
 #: GTG/taskbrowser/__init__.py:32
 msgid "Undismiss"
-msgstr ""
+msgstr "Annuler l'abandon"
