--- a/locales/gtg-it.po
+++ b/locales/gtg-it.po
@@ -1,12 +1,16 @@
-#, fuzzy
+# Italian translation for gtg
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the gtg package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: gtg\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-01 12:00+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-04-01 15:06+0000\n"
+"Last-Translator: Luca Falavigna <dktrkranz@ubuntu.com>\n"
+"Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,11 +19,12 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:6
 msgid "Getting started with GTG"
-msgstr ""
+msgstr "Introduzione a GTG"
 
 #: GTG/core/firstrun_tasks.py:7
 msgid "Welcome in Getting Things Gnome!, your new task manager."
 msgstr ""
+"Benvenuto in Getting Things GNOME!, il tuo nuovo gestore di attività."
 
 #: GTG/core/firstrun_tasks.py:9
 msgid ""
@@ -27,40 +32,51 @@ msgid ""
 "to changing a light bulb or organizing a party. When you edit a task, it is "
 "automatically saved."
 msgstr ""
+"In GTG, ogni cosa è un'attivita. Dal costruire un ponte sull'Oceano Pacifico "
+"al cambiare una lampadina o organizzare una festa. Quando modifichi "
+"un'attività, essa è salvata automaticamente."
 
 #: GTG/core/firstrun_tasks.py:11
 msgid ""
 "Once a task is done, you can push the &quot;Mark as done&quot; button. If "
 "the task is not relevant any-more, simply press &quot;Dismiss&quot;."
 msgstr ""
+"Non appena un task è completo, puoi premere il tasto &quot;Marca come "
+"completo&quot;. Se l'attività non è più rilevante, è sufficiente premere "
+"&quot;Rimuovi&quot;."
 
 #: GTG/core/firstrun_tasks.py:13
 msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link :"
 msgstr ""
+"Un attività può essere composta da diverse subattività che appaiono come "
+"collegamenti nella descrizione. E' sufficiente cliccare sul collegamento "
+"seguente:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid "Don't forget to mark this subtask as done !"
-msgstr ""
+msgstr "Non dimenticare di marcare la subattività come completa!"
 
 #: GTG/core/firstrun_tasks.py:19
 msgid "Other stuff you should read :"
-msgstr ""
+msgstr "Altro materiale che dovresti leggere:"
 
 #: GTG/core/firstrun_tasks.py:25
 msgid ""
 "We hope that you will appreciate GTG. Please send us bug reports and ideas "
 "for improvement using : "
 msgstr ""
+"Speriamo che tu apprezzi GTG. Per favore, inviaci segnalazioni di "
+"malfunzionamenti o miglioramenti: "
 
 #: GTG/core/firstrun_tasks.py:28
 msgid "Thank you for trying out GTG :-)"
-msgstr ""
+msgstr "Grazie per aver provato GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:33
 msgid "Learn to use subtasks"
-msgstr ""
+msgstr "Impara ad usare le subattività"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid ""
@@ -69,41 +85,54 @@ msgid ""
 "to be done in order to accomplish your task. Just try to write &quot;- test "
 "subtask&quot; on the next line and press enter."
 msgstr ""
+"Nella descrizione dell'attività (finestra corrente), se anteponi il simbolo "
+"&quot;-&quot;, sarà considerato come una &quot;subattività&quot;, qualcosa "
+"che deve essere completato per poter procedere nel realizzare l'attività "
+"principale. E' sufficiente scrivere &quot;- Prova subattività&quot; nella "
+"riga seguente e premere Invio."
 
 #: GTG/core/firstrun_tasks.py:36
 msgid "You can also use the &quot;insert subtask&quot; button."
-msgstr ""
+msgstr "Puoi anche usare il tasto &quot;Inserisci subattività&quot;."
 
 #: GTG/core/firstrun_tasks.py:38
 msgid ""
 "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
 msgstr ""
+"Le attività e le subattività possono essere rieorganizzate con il metodo "
+"punta e clicca nell'elenco delle attività"
 
 #: GTG/core/firstrun_tasks.py:40
 msgid ""
 "Some concept come with subtasks : for example, a subtask due date can never "
 "be after its parent due date."
 msgstr ""
+"Alcuni accorgimenti con le subattività: per esempio, la data di scadenza di "
+"una subattività non può mai essere successiva a quella dell'attività "
+"sovrastante."
 
 #: GTG/core/firstrun_tasks.py:42
 msgid "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Inoltre, marcare l'attività sovrastante come completa renderà complete tutte "
+"le subattività correlate."
 
 #: GTG/core/firstrun_tasks.py:47
 msgid "Learn to use tags"
-msgstr ""
+msgstr "Impara ad usare i tag"
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "A tag is a simple word that begin with &quot;@&quot;."
 msgstr ""
+"Un tag è una semplice parola che comincia con &quot;insert subtask&quot;"
 
 #: GTG/core/firstrun_tasks.py:50
 msgid "Try to type a word beginning with @ here :"
-msgstr ""
+msgstr "E' sufficiente scrivere una parola che comincia con @ qui:"
 
 #: GTG/core/firstrun_tasks.py:52
 msgid "It becomes yellow, it's a tag."
-msgstr ""
+msgstr "Diventerà di colore giallo, è un tag."
 
 #: GTG/core/firstrun_tasks.py:54
 msgid ""
@@ -112,6 +141,10 @@ msgid ""
 "tasks for a given tag. There's no limit to the number of tags a task can "
 "have."
 msgstr ""
+"I tag sono utili per organizzare le attività. Nel menu visualizza, puoi "
+"abilitare la barra laterale che visualizza tutti i tag che stai usando in "
+"modo da poter vedre facilmente le attività assegnate ad uno specifico tag. "
+"Non ci sono limiti al numero di tag che può avere un'attività."
 
 #: GTG/core/firstrun_tasks.py:56
 msgid ""
@@ -119,6 +152,9 @@ msgid ""
 "will permit you to have a more colorful list of tasks, if you want it that "
 "way."
 msgstr ""
+"Cliccando con il tasto destro su un tag nella barra laterale puoi "
+"assegnargli un colore. Se lo desideri, questo ti permetterà di avere la "
+"lista delle attività colorata."
 
 #: GTG/core/firstrun_tasks.py:58
 msgid ""
@@ -129,37 +165,53 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Un nuovo tag è aggiunto solo all'attività corrente. Non vi è ricorsione e il "
+"tag non verrà applicato alle subattività. Quando creerai una nuova "
+"subattività, erediterà il tag dell'attività sovrastante (ciò avverrà anche "
+"aggiungendo un tag ad un'attività subito dopo aver creato una subattività). "
+"In ogni modo potrai modificare i tag in qualsiasi momento e non saranno mai "
+"modificati dall'attività sovrastante."
 
 #: GTG/core/firstrun_tasks.py:63
 msgid "Using the Workview"
-msgstr ""
+msgstr "Usare la Scaletta di lavoro"
 
 #: GTG/core/firstrun_tasks.py:64
 msgid ""
 "If you press the &quot;Workview&quot; button, only actionable tasks will be "
 "displayed."
 msgstr ""
+"Se premi il pulsante &quot;Scaletta di lavoro&quot;, saranno visualizzate "
+"solo le attività attivabili."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid ""
 "What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
+"Che cos'è un'attività azionabile? E' un'attività che puoi compiere "
+"immediatamente, proprio ora."
 
 #: GTG/core/firstrun_tasks.py:68
 msgid ""
 "It's a task that is already &quot;start-able&quot;, i.e. the start date is "
 "already over."
 msgstr ""
+"E' un'attività che è già &quot;avviabile&quot;, p.e. la data di inizio è già "
+"passata."
 
 #: GTG/core/firstrun_tasks.py:70
 msgid ""
 "It's a task that doesn't have open subtasks, i.e. you can do the task itself "
 "directly."
 msgstr ""
+"E' un'attività che non ha subattività aperte, p.e. puoi direttamente "
+"completare l'attività medesima."
 
 #: GTG/core/firstrun_tasks.py:72
 msgid "Thus, the workview will only show you tasks you should do right now."
 msgstr ""
+"In questo modo, la scaletta di lavoro mostrerà solo i task che potrai fare "
+"adesso."
 
 #: GTG/core/firstrun_tasks.py:74
 msgid ""
@@ -168,93 +220,106 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Se usi i tag, puoi cliccare su un tag nella barra laterale e scegliere di "
+"non visualizzare nella scaletta di lavoro le attività con un determinato "
+"tag. E' molto utile se hai un tag simile a &quot;prima o poi&quot; che usi "
+"per le attività che vorresti fare, ma che non sono particolarmente urgenti."
 
 #: GTG/core/firstrun_tasks.py:80
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Segnalare malfunzionamenti"
 
 #: GTG/core/firstrun_tasks.py:81
 msgid ""
 "GTG is still very alpha software. We like it and use it everyday but you "
 "will encounter some bugs."
 msgstr ""
+"GTG è ancora in fase di sviluppo. CI piace e lo usiamo tutti i giorni, ma è "
+"probabile che incontrerai qualche malfunzionamento."
 
 #: GTG/core/firstrun_tasks.py:83
 msgid ""
 "Please, report them ! We need you to make this software better. Any "
 "contribution, any idea is welcome."
 msgstr ""
+"Per favore, segnalali! Abbiamo bisogno di migliorare la qualità del "
+"software. Qualsiasi contributo o idea è bene accetta."
 
 #: GTG/core/firstrun_tasks.py:85
 msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"Se hai problemi con GTG, siamo in grado di aiutarti a risolvere il problema "
+"molto rapidamente."
 
 #: GTG/taskeditor/editor.py:208
 msgid "Due tomorrow !"
-msgstr ""
+msgstr "Pronto domani!"
 
 #: GTG/taskeditor/editor.py:210
 #, python-format
 msgid "%s days left"
-msgstr ""
+msgstr "%s giorni rimanenti"
 
 #: GTG/taskeditor/editor.py:212
 msgid "Due today !"
-msgstr ""
+msgstr "Pronto oggi!"
 
 #: GTG/taskeditor/editor.py:214
 msgid "Due for yesterday"
-msgstr ""
+msgstr "Dovuto ieri"
 
 #: GTG/taskeditor/editor.py:216
 #, python-format
 msgid "Was %s days ago"
-msgstr ""
+msgstr "Dovuto %s giorni fa"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "<span weight=\"bold\">Due for</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Pronto per il</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:2
 msgid "<span weight=\"bold\">Starting on</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">A partire da</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
 msgid "Delete"
-msgstr ""
+msgstr "Elimina"
 
 #: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
 msgid "Dismiss"
-msgstr ""
+msgstr "Rimuovi"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
-msgstr ""
+msgstr "Inserisci subattività"
 
 #: GTG/taskeditor/taskeditor.glade.h:6
 msgid "Insert tag"
-msgstr ""
+msgstr "Inserisci tag"
 
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Keep as Note"
-msgstr ""
+msgstr "Mantieni come nota"
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr ""
+msgstr "Marca come completo"
 
 #: GTG/taskeditor/taskeditor.glade.h:9
 msgid "Task"
-msgstr ""
+msgstr "Attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
 "\n"
 "Getting Things Gnome! is an organizer for the GNOME desktop environment."
 msgstr ""
+"\n"
+"Getting Things GNOME! è un organizzatore di attivitò per l'ambiente di "
+"lavoro GNOME."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
@@ -263,42 +328,45 @@ msgid ""
 "\n"
 "Deleting a task cannot be undone."
 msgstr ""
+"<span weight=\"bold\" size=\"large\">Sei sicuro di voler eliminare "
+"l'attività?</span>\n"
+"Non è possibile ripristinare un'attività eliminata."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "About GTG!"
-msgstr ""
+msgstr "Informazioni"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Choose a color"
-msgstr ""
+msgstr "Scegli un colore"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:8
 msgid "Confirm task deletion"
-msgstr ""
+msgstr "Conferma l'eliminazione dell'attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:9
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Copyright @ 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
 msgid "Create a new task"
-msgstr ""
+msgstr "Crea una nuova attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
-msgstr ""
+msgstr "E_limina"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
-msgstr ""
+msgstr "Modifica"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:15
 msgid "GTG website"
-msgstr ""
+msgstr "Sito Internet di GTG"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:16
 msgid "Getting Things Gnome!"
-msgstr ""
+msgstr "Getting Things GNOME!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:17
 msgid ""
@@ -316,240 +384,253 @@ msgid ""
 "Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things GNOME! is free software; you can redistribute it and/or "
+"modify it under the terms of the GNU General Public License as published by "
+"the Free Software Foundation; either version 3 of the License, or (at your "
+"option) any later version.\n"
+"\n"
+"Getting Things GNOME! is distributed in the hope that it will be useful, but "
+"WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY "
+"or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for "
+"more details.\n"
+"\n"
+"You should have received a copy of the GNU General Public License along with "
+"Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
+"51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:22
 msgid "Mark as Done"
-msgstr ""
+msgstr "Marca come completo"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:23
 msgid "Mark as Not Done"
-msgstr ""
+msgstr "Marca come non completo"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:24
 msgid "Mark as _Done"
-msgstr ""
+msgstr "Marca come _Completo"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:25
 msgid "New Note"
-msgstr ""
+msgstr "Nuova Nota"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:26
 msgid "New Subtask"
-msgstr ""
+msgstr "Nuova subattività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:27
 msgid "New Task"
-msgstr ""
+msgstr "Nuova attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "New _Subtask"
-msgstr ""
+msgstr "Nuova _subattività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:29
 msgid "New _Task"
-msgstr ""
+msgstr "Nuova _attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:30
 msgid "Permanently _remove task"
-msgstr ""
+msgstr "Elimina il task permanentemente"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:31
 msgid "Redo"
-msgstr ""
+msgstr "Ripeti"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:32
 msgid "Tag is displayed in the workview"
-msgstr ""
+msgstr "Il tag è visualizzato nella scaletta di lavoro"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
 #: GTG/taskbrowser/browser.py:1548
 msgid "Tags"
-msgstr ""
+msgstr "Tag"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
-msgstr ""
+msgstr "Ripristina"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:35
 msgid "Undo"
-msgstr ""
+msgstr "Annulla"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:36
 msgid "View Notes"
-msgstr ""
+msgstr "Visualizza note"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:37
 msgid "Work View"
-msgstr ""
+msgstr "Scaletta di lavoro"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:38
 msgid "_Background Colors"
-msgstr ""
+msgstr "C_olori di sfondo"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:39
 msgid "_Closed Tasks Pane"
-msgstr ""
+msgstr "_Chiudi il pannello delle attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:40
 msgid "_Edit"
-msgstr ""
+msgstr "_Modifica"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:41
 msgid "_File"
-msgstr ""
+msgstr "_File"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:42
 msgid "_Help"
-msgstr ""
+msgstr "_Aiuto"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Keep selected task"
-msgstr ""
+msgstr "Man_tieni l'attività selezionata"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:44
 msgid "_Quick Add Entry"
-msgstr ""
+msgstr "Inserisci el_emento"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:45
 msgid "_Tags Sidebar"
-msgstr ""
+msgstr "Barra laterale _Tag"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:46
 msgid "_Tasks"
-msgstr ""
+msgstr "_Attività"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:47
 msgid "_View"
-msgstr ""
+msgstr "_Visualizza"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
 msgid "_Work View"
-msgstr ""
+msgstr "S_caletta di lavoro"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
 msgid "gtk-add"
-msgstr ""
+msgstr "gtk-aggiungi"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:50
 msgid "gtk-cancel"
-msgstr ""
+msgstr "gtk-annulla"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:51
 msgid "gtk-help"
-msgstr ""
+msgstr "gtk-aiuto"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:52
 msgid "gtk-ok"
-msgstr ""
+msgstr "gtk-ok"
 
 #: GTG/taskbrowser/browser.py:107
 msgid "Mark the selected task as done"
-msgstr ""
+msgstr "Marca l'attività selezionata come completa"
 
 #: GTG/taskbrowser/browser.py:108
 msgid "Edit the selected task"
-msgstr ""
+msgstr "Modifica le attività selezionate"
 
 #: GTG/taskbrowser/browser.py:109
 msgid "Dismiss the selected task"
-msgstr ""
+msgstr "Elimina l'attività selezionata"
 
 #: GTG/taskbrowser/browser.py:111
 msgid "Create a new subtask"
-msgstr ""
+msgstr "Crea una nuova subattività"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "monday"
-msgstr ""
+msgstr "lunedì"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "tuesday"
-msgstr ""
+msgstr "martedì"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "wednesday"
-msgstr ""
+msgstr "mercoledì"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "thursday"
-msgstr ""
+msgstr "giovedì"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "friday"
-msgstr ""
+msgstr "venerdì"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "saturday"
-msgstr ""
+msgstr "sabato"
 
 #: GTG/taskbrowser/browser.py:554
 msgid "sunday"
-msgstr ""
+msgstr "domenica"
 
 #: GTG/taskbrowser/browser.py:563
 msgid "today"
-msgstr ""
+msgstr "oggi"
 
 #: GTG/taskbrowser/browser.py:570
 msgid "tomorrow"
-msgstr ""
+msgstr "domani"
 
 #: GTG/taskbrowser/browser.py:631
 msgid "tags"
-msgstr ""
+msgstr "tag"
 
 #: GTG/taskbrowser/browser.py:634
 msgid "defer"
-msgstr ""
+msgstr "posticipa"
 
 #: GTG/taskbrowser/browser.py:638
 msgid "due"
-msgstr ""
+msgstr "dovuta"
 
 #: GTG/taskbrowser/browser.py:749
 msgid "<span weight=\"bold\">All tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Tutti i tag</span>"
 
 #: GTG/taskbrowser/browser.py:750
 msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Attività senza tag</span>"
 
 #: GTG/taskbrowser/browser.py:845
 msgid "(no active tasks)"
-msgstr ""
+msgstr "(nessun'attività attiva)"
 
 #: GTG/taskbrowser/browser.py:847
 msgid "(1 active task)"
-msgstr ""
+msgstr "(1 attività attiva)"
 
 #: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
 msgid "Title"
-msgstr ""
+msgstr "Titolo"
 
 #: GTG/taskbrowser/browser.py:1511
 msgid "Due date"
-msgstr ""
+msgstr "Data di scadenza"
 
 #: GTG/taskbrowser/browser.py:1525
 msgid "Days left"
-msgstr ""
+msgstr "Giorni rimanenti"
 
 #: GTG/taskbrowser/browser.py:1563
 msgid "Closing date"
-msgstr ""
+msgstr "Data di completamento"
 
 #: GTG/taskbrowser/browser.py:1591
 msgid "Notes"
-msgstr ""
+msgstr "Note"
 
 #: GTG/taskbrowser/__init__.py:29
 msgid "Mark as done"
-msgstr ""
+msgstr "Marca come completo"
 
 #: GTG/taskbrowser/__init__.py:30
 msgid "Mark as not done"
-msgstr ""
+msgstr "Marca come non completo"
 
 #: GTG/taskbrowser/__init__.py:32
 msgid "Undismiss"
-msgstr ""
+msgstr "Ripristina"
