--- a/locales/gtg-ms.po
+++ b/locales/gtg-ms.po
@@ -1,12 +1,16 @@
-#, fuzzy
+# Malay translation for gtg
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the gtg package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: gtg\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-01 12:00+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-04-02 03:27+0000\n"
+"Last-Translator: melayubuntu <zul.malc@gmail.com>\n"
+"Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,11 +19,12 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:6
 msgid "Getting started with GTG"
-msgstr ""
+msgstr "Bermula dengan GTG"
 
 #: GTG/core/firstrun_tasks.py:7
 msgid "Welcome in Getting Things Gnome!, your new task manager."
 msgstr ""
+"Selamat datang ke Getting Things Gnome!, pengurus task anda yang baru."
 
 #: GTG/core/firstrun_tasks.py:9
 msgid ""
@@ -42,11 +47,11 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:17
 msgid "Don't forget to mark this subtask as done !"
-msgstr ""
+msgstr "Jangan lupa untuk menandakan subtask ini sebagai telah dibuat!"
 
 #: GTG/core/firstrun_tasks.py:19
 msgid "Other stuff you should read :"
-msgstr ""
+msgstr "Perkara lain anda perlu baca :"
 
 #: GTG/core/firstrun_tasks.py:25
 msgid ""
@@ -56,11 +61,11 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:28
 msgid "Thank you for trying out GTG :-)"
-msgstr ""
+msgstr "Terima kasih kerana mencuba GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:33
 msgid "Learn to use subtasks"
-msgstr ""
+msgstr "Belajar cara menggunakan subtask"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid ""
@@ -72,7 +77,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:36
 msgid "You can also use the &quot;insert subtask&quot; button."
-msgstr ""
+msgstr "Anda kjuga boleh menggunakan butang &gquot;masukkan subtask&quot;"
 
 #: GTG/core/firstrun_tasks.py:38
 msgid ""
@@ -91,19 +96,19 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:47
 msgid "Learn to use tags"
-msgstr ""
+msgstr "Belajar menggunakan tanda"
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "A tag is a simple word that begin with &quot;@&quot;."
-msgstr ""
+msgstr "Tanda ialah perkataan pendek yang bermula dengan &quot;@&quot;."
 
 #: GTG/core/firstrun_tasks.py:50
 msgid "Try to type a word beginning with @ here :"
-msgstr ""
+msgstr "Cuba taipkan perkataan dimulakan denagn @ disini :"
 
 #: GTG/core/firstrun_tasks.py:52
 msgid "It becomes yellow, it's a tag."
-msgstr ""
+msgstr "Ianya menjadi kuning, ianya satu tanda."
 
 #: GTG/core/firstrun_tasks.py:54
 msgid ""
@@ -132,7 +137,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:63
 msgid "Using the Workview"
-msgstr ""
+msgstr "Gunakan Workview"
 
 #: GTG/core/firstrun_tasks.py:64
 msgid ""
@@ -171,13 +176,15 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:80
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Laporkan pepijat"
 
 #: GTG/core/firstrun_tasks.py:81
 msgid ""
 "GTG is still very alpha software. We like it and use it everyday but you "
 "will encounter some bugs."
 msgstr ""
+"GTG ialah perisian yang masih diperingkat Alfa. Kami sukakannya dan "
+"menggunakannya setiap hari namun anda pasti akan menghadapi beberapa pepijat."
 
 #: GTG/core/firstrun_tasks.py:83
 msgid ""
@@ -193,62 +200,62 @@ msgstr ""
 
 #: GTG/taskeditor/editor.py:208
 msgid "Due tomorrow !"
-msgstr ""
+msgstr "Hingga esok !"
 
 #: GTG/taskeditor/editor.py:210
 #, python-format
 msgid "%s days left"
-msgstr ""
+msgstr "%s hari lagi"
 
 #: GTG/taskeditor/editor.py:212
 msgid "Due today !"
-msgstr ""
+msgstr "Hingga hari ini !"
 
 #: GTG/taskeditor/editor.py:214
 msgid "Due for yesterday"
-msgstr ""
+msgstr "Hingga semalam"
 
 #: GTG/taskeditor/editor.py:216
 #, python-format
 msgid "Was %s days ago"
-msgstr ""
+msgstr "%s hari lalu"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "<span weight=\"bold\">Due for</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Hingga</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:2
 msgid "<span weight=\"bold\">Starting on</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Bermula pada</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
 msgid "Delete"
-msgstr ""
+msgstr "Padam"
 
 #: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
 msgid "Dismiss"
-msgstr ""
+msgstr "Mengetepikan"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
-msgstr ""
+msgstr "Masukkan subtask"
 
 #: GTG/taskeditor/taskeditor.glade.h:6
 msgid "Insert tag"
-msgstr ""
+msgstr "Masukkan tanda"
 
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Keep as Note"
-msgstr ""
+msgstr "Kekalkan sebagai nota"
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr ""
+msgstr "Sudah Buat"
 
 #: GTG/taskeditor/taskeditor.glade.h:9
 msgid "Task"
-msgstr ""
+msgstr "Task"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
@@ -266,39 +273,39 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "About GTG!"
-msgstr ""
+msgstr "Tentang GTG!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Choose a color"
-msgstr ""
+msgstr "Pilih satu warna"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:8
 msgid "Confirm task deletion"
-msgstr ""
+msgstr "Pastikan pemadaman task"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:9
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
 msgid "Create a new task"
-msgstr ""
+msgstr "Binakan task baru"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
-msgstr ""
+msgstr "K_etepikan"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
-msgstr ""
+msgstr "Sunting"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:15
 msgid "GTG website"
-msgstr ""
+msgstr "Laman Web GTG"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:16
 msgid "Getting Things Gnome!"
-msgstr ""
+msgstr "Getting Things Gnome!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:17
 msgid ""
@@ -331,15 +338,15 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:25
 msgid "New Note"
-msgstr ""
+msgstr "Nota Baru"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:26
 msgid "New Subtask"
-msgstr ""
+msgstr "Subtask Baru"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:27
 msgid "New Task"
-msgstr ""
+msgstr "Task Baru"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "New _Subtask"
@@ -364,7 +371,7 @@ msgstr ""
 #: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
 #: GTG/taskbrowser/browser.py:1548
 msgid "Tags"
-msgstr ""
+msgstr "Tanda"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
@@ -376,7 +383,7 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:36
 msgid "View Notes"
-msgstr ""
+msgstr "Lihat Nota"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:37
 msgid "Work View"
@@ -392,15 +399,15 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:40
 msgid "_Edit"
-msgstr ""
+msgstr "_Sunting"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:41
 msgid "_File"
-msgstr ""
+msgstr "_Fail"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:42
 msgid "_Help"
-msgstr ""
+msgstr "_Bantuan"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Keep selected task"
@@ -416,11 +423,11 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:46
 msgid "_Tasks"
-msgstr ""
+msgstr "_Task"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:47
 msgid "_View"
-msgstr ""
+msgstr "_Lihat"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
 msgid "_Work View"
@@ -432,15 +439,15 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:50
 msgid "gtk-cancel"
-msgstr ""
+msgstr "batal-gtk"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:51
 msgid "gtk-help"
-msgstr ""
+msgstr "gtk-pertolongan"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:52
 msgid "gtk-ok"
-msgstr ""
+msgstr "gtk-ok"
 
 #: GTG/taskbrowser/browser.py:107
 msgid "Mark the selected task as done"
@@ -448,7 +455,7 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:108
 msgid "Edit the selected task"
-msgstr ""
+msgstr "Sunting task yang dipilih"
 
 #: GTG/taskbrowser/browser.py:109
 msgid "Dismiss the selected task"
@@ -456,15 +463,15 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:111
 msgid "Create a new subtask"
-msgstr ""
+msgstr "Binakan subtask baru"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "monday"
-msgstr ""
+msgstr "isnin"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "tuesday"
-msgstr ""
+msgstr "selasa"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "wednesday"
@@ -472,75 +479,75 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:553
 msgid "thursday"
-msgstr ""
+msgstr "khamis"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "friday"
-msgstr ""
+msgstr "jumaat"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "saturday"
-msgstr ""
+msgstr "sabtu"
 
 #: GTG/taskbrowser/browser.py:554
 msgid "sunday"
-msgstr ""
+msgstr "ahad"
 
 #: GTG/taskbrowser/browser.py:563
 msgid "today"
-msgstr ""
+msgstr "hari ini"
 
 #: GTG/taskbrowser/browser.py:570
 msgid "tomorrow"
-msgstr ""
+msgstr "esok"
 
 #: GTG/taskbrowser/browser.py:631
 msgid "tags"
-msgstr ""
+msgstr "tanda"
 
 #: GTG/taskbrowser/browser.py:634
 msgid "defer"
-msgstr ""
+msgstr "tangguh"
 
 #: GTG/taskbrowser/browser.py:638
 msgid "due"
-msgstr ""
+msgstr "dijadualkan"
 
 #: GTG/taskbrowser/browser.py:749
 msgid "<span weight=\"bold\">All tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Semua tanda</span>"
 
 #: GTG/taskbrowser/browser.py:750
 msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Task tanpa tanda</span>"
 
 #: GTG/taskbrowser/browser.py:845
 msgid "(no active tasks)"
-msgstr ""
+msgstr "(tiada task aktif)"
 
 #: GTG/taskbrowser/browser.py:847
 msgid "(1 active task)"
-msgstr ""
+msgstr "(1 task aktif)"
 
 #: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
 msgid "Title"
-msgstr ""
+msgstr "Tajuk"
 
 #: GTG/taskbrowser/browser.py:1511
 msgid "Due date"
-msgstr ""
+msgstr "Tarikh dijadualkan"
 
 #: GTG/taskbrowser/browser.py:1525
 msgid "Days left"
-msgstr ""
+msgstr "Hari lagi"
 
 #: GTG/taskbrowser/browser.py:1563
 msgid "Closing date"
-msgstr ""
+msgstr "Tarikh tutup"
 
 #: GTG/taskbrowser/browser.py:1591
 msgid "Notes"
-msgstr ""
+msgstr "Nota"
 
 #: GTG/taskbrowser/__init__.py:29
 msgid "Mark as done"
