--- a/locales/gtg-nl.po
+++ b/locales/gtg-nl.po
@@ -1,12 +1,16 @@
-#, fuzzy
+# Dutch translation for gtg
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the gtg package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: gtg\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-01 12:00+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-04-01 12:21+0000\n"
+"Last-Translator: puccha <Unknown>\n"
+"Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,11 +19,11 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:6
 msgid "Getting started with GTG"
-msgstr ""
+msgstr "Beginnen met GTG"
 
 #: GTG/core/firstrun_tasks.py:7
 msgid "Welcome in Getting Things Gnome!, your new task manager."
-msgstr ""
+msgstr "Welkom tot Getting Things Gnome (GTG), uw nieuwe taak beheerder."
 
 #: GTG/core/firstrun_tasks.py:9
 msgid ""
@@ -27,6 +31,9 @@ msgid ""
 "to changing a light bulb or organizing a party. When you edit a task, it is "
 "automatically saved."
 msgstr ""
+"In GTG is alles een taak. Van het bouwen van een brug over de Grote Oceaan "
+"tot het vervangen van een lampje of het organiseren van een feest. Wanneer "
+"je een taak maakt of wijzigt wordt het automatisch opgeslagen."
 
 #: GTG/core/firstrun_tasks.py:11
 msgid ""
@@ -39,14 +46,16 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link :"
 msgstr ""
+"Een taak kan bestaan uit meerdere subtaken, de subtaken verschijnen als "
+"verwijzingen in de omschrijving. Klik simpelweg op de volgende verwijzing:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid "Don't forget to mark this subtask as done !"
-msgstr ""
+msgstr "Vergeet hierna niet de subtaak als gedaan te markeren!"
 
 #: GTG/core/firstrun_tasks.py:19
 msgid "Other stuff you should read :"
-msgstr ""
+msgstr "Andere dingen die u misschien wil lezen"
 
 #: GTG/core/firstrun_tasks.py:25
 msgid ""
@@ -56,11 +65,11 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:28
 msgid "Thank you for trying out GTG :-)"
-msgstr ""
+msgstr "Bedank voor het proberen van GTG! :-)"
 
 #: GTG/core/firstrun_tasks.py:33
 msgid "Learn to use subtasks"
-msgstr ""
+msgstr "Leer over subtaken"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid ""
@@ -91,7 +100,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:47
 msgid "Learn to use tags"
-msgstr ""
+msgstr "Leer over labels"
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "A tag is a simple word that begin with &quot;@&quot;."
@@ -171,7 +180,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:80
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Fouten rapporteren"
 
 #: GTG/core/firstrun_tasks.py:81
 msgid ""
@@ -193,68 +202,70 @@ msgstr ""
 
 #: GTG/taskeditor/editor.py:208
 msgid "Due tomorrow !"
-msgstr ""
+msgstr "Vervalt morgen!"
 
 #: GTG/taskeditor/editor.py:210
 #, python-format
 msgid "%s days left"
-msgstr ""
+msgstr "%s dagen resterent"
 
 #: GTG/taskeditor/editor.py:212
 msgid "Due today !"
-msgstr ""
+msgstr "Vervalt vandaag!"
 
 #: GTG/taskeditor/editor.py:214
 msgid "Due for yesterday"
-msgstr ""
+msgstr "Gisteren vervallen"
 
 #: GTG/taskeditor/editor.py:216
 #, python-format
 msgid "Was %s days ago"
-msgstr ""
+msgstr "was %s dagen geleden"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "<span weight=\"bold\">Due for</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Vervalt op</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:2
 msgid "<span weight=\"bold\">Starting on</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Begint op</span>"
 
 #: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
 msgid "Delete"
-msgstr ""
+msgstr "Verwijder"
 
 #: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
 msgid "Dismiss"
-msgstr ""
+msgstr "Afwijzen"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
-msgstr ""
+msgstr "Subtaak toevoegen"
 
 #: GTG/taskeditor/taskeditor.glade.h:6
 msgid "Insert tag"
-msgstr ""
+msgstr "Label toevoegen"
 
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Keep as Note"
-msgstr ""
+msgstr "Bewaar als notitie"
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr ""
+msgstr "Markeer als gedaan"
 
 #: GTG/taskeditor/taskeditor.glade.h:9
 msgid "Task"
-msgstr ""
+msgstr "Taak"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
 "\n"
 "Getting Things Gnome! is an organizer for the GNOME desktop environment."
 msgstr ""
+"\n"
+"Getting Things Gnome! is een organizer for de GNOME desktop omgeving."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
@@ -263,26 +274,30 @@ msgid ""
 "\n"
 "Deleting a task cannot be undone."
 msgstr ""
+"<span weight=\"bold\" size=\"large\">Weet u zeker dat u deze taak wilt "
+"verwijderen?</span>\n"
+"\n"
+"Een taak verwijderen kan niet ongedaan gemaakt worden."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "About GTG!"
-msgstr ""
+msgstr "Over GTG!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Choose a color"
-msgstr ""
+msgstr "Kies een kleur"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:8
 msgid "Confirm task deletion"
-msgstr ""
+msgstr "Bevestig verwijderen van taak"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:9
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Auteursrecht© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
 msgid "Create a new task"
-msgstr ""
+msgstr "Nieuwe taak aanmaken"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
@@ -290,15 +305,15 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
-msgstr ""
+msgstr "Bewerken"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:15
 msgid "GTG website"
-msgstr ""
+msgstr "GTG website"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:16
 msgid "Getting Things Gnome!"
-msgstr ""
+msgstr "Getting Things Gnome!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:17
 msgid ""
@@ -319,43 +334,43 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:22
 msgid "Mark as Done"
-msgstr ""
+msgstr "Markeer als gedaan"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:23
 msgid "Mark as Not Done"
-msgstr ""
+msgstr "Markeer als niet gedaan"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:24
 msgid "Mark as _Done"
-msgstr ""
+msgstr "Markeer als ge_daan"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:25
 msgid "New Note"
-msgstr ""
+msgstr "Nieuwe notitie"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:26
 msgid "New Subtask"
-msgstr ""
+msgstr "Nieuwe subtaak"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:27
 msgid "New Task"
-msgstr ""
+msgstr "Nieuwe taak"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "New _Subtask"
-msgstr ""
+msgstr "Nieuwe _subtaak"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:29
 msgid "New _Task"
-msgstr ""
+msgstr "Nieuwe _taak"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:30
 msgid "Permanently _remove task"
-msgstr ""
+msgstr "Ve_rwijder taak permanent"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:31
 msgid "Redo"
-msgstr ""
+msgstr "Opnieuw"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:32
 msgid "Tag is displayed in the workview"
@@ -364,7 +379,7 @@ msgstr ""
 #: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
 #: GTG/taskbrowser/browser.py:1548
 msgid "Tags"
-msgstr ""
+msgstr "Labels"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
@@ -372,11 +387,11 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:35
 msgid "Undo"
-msgstr ""
+msgstr "Ongedaan maken"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:36
 msgid "View Notes"
-msgstr ""
+msgstr "Bekijk notities"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:37
 msgid "Work View"
@@ -384,27 +399,27 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:38
 msgid "_Background Colors"
-msgstr ""
+msgstr "_Achtergrond kleuren"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:39
 msgid "_Closed Tasks Pane"
-msgstr ""
+msgstr "_Gesloten taken venster"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:40
 msgid "_Edit"
-msgstr ""
+msgstr "_Bewerken"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:41
 msgid "_File"
-msgstr ""
+msgstr "_Bestand"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:42
 msgid "_Help"
-msgstr ""
+msgstr "_Help"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Keep selected task"
-msgstr ""
+msgstr "Geselecteerde taak _behouden"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:44
 msgid "_Quick Add Entry"
@@ -412,15 +427,15 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:45
 msgid "_Tags Sidebar"
-msgstr ""
+msgstr "_Labels zijpaneel"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:46
 msgid "_Tasks"
-msgstr ""
+msgstr "_Taken"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:47
 msgid "_View"
-msgstr ""
+msgstr "_Beeld"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
 msgid "_Work View"
@@ -444,11 +459,11 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:107
 msgid "Mark the selected task as done"
-msgstr ""
+msgstr "Markeer de geslecteerde taak als gedaan"
 
 #: GTG/taskbrowser/browser.py:108
 msgid "Edit the selected task"
-msgstr ""
+msgstr "Bewerk de geselecteerde taak"
 
 #: GTG/taskbrowser/browser.py:109
 msgid "Dismiss the selected task"
@@ -456,47 +471,47 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:111
 msgid "Create a new subtask"
-msgstr ""
+msgstr "Nieuwe subtaak maken"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "monday"
-msgstr ""
+msgstr "maandag"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "tuesday"
-msgstr ""
+msgstr "dinsdag"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "wednesday"
-msgstr ""
+msgstr "woensdag"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "thursday"
-msgstr ""
+msgstr "donderdag"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "friday"
-msgstr ""
+msgstr "vrijdag"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "saturday"
-msgstr ""
+msgstr "zaterdag"
 
 #: GTG/taskbrowser/browser.py:554
 msgid "sunday"
-msgstr ""
+msgstr "zondag"
 
 #: GTG/taskbrowser/browser.py:563
 msgid "today"
-msgstr ""
+msgstr "vandaag"
 
 #: GTG/taskbrowser/browser.py:570
 msgid "tomorrow"
-msgstr ""
+msgstr "morgen"
 
 #: GTG/taskbrowser/browser.py:631
 msgid "tags"
-msgstr ""
+msgstr "labels"
 
 #: GTG/taskbrowser/browser.py:634
 msgid "defer"
@@ -508,31 +523,31 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:749
 msgid "<span weight=\"bold\">All tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Alle labels</span>"
 
 #: GTG/taskbrowser/browser.py:750
 msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Taken zonder labels</span>"
 
 #: GTG/taskbrowser/browser.py:845
 msgid "(no active tasks)"
-msgstr ""
+msgstr "(geen actieve taken)"
 
 #: GTG/taskbrowser/browser.py:847
 msgid "(1 active task)"
-msgstr ""
+msgstr "(1 actieve taak)"
 
 #: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
 msgid "Title"
-msgstr ""
+msgstr "Titel"
 
 #: GTG/taskbrowser/browser.py:1511
 msgid "Due date"
-msgstr ""
+msgstr "Vervaldatum"
 
 #: GTG/taskbrowser/browser.py:1525
 msgid "Days left"
-msgstr ""
+msgstr "Dagen resterend"
 
 #: GTG/taskbrowser/browser.py:1563
 msgid "Closing date"
@@ -540,15 +555,15 @@ msgstr ""
 
 #: GTG/taskbrowser/browser.py:1591
 msgid "Notes"
-msgstr ""
+msgstr "Notities"
 
 #: GTG/taskbrowser/__init__.py:29
 msgid "Mark as done"
-msgstr ""
+msgstr "Markeren als gedaan"
 
 #: GTG/taskbrowser/__init__.py:30
 msgid "Mark as not done"
-msgstr ""
+msgstr "Markeren als niet gedaan"
 
 #: GTG/taskbrowser/__init__.py:32
 msgid "Undismiss"
