--- a/locales/gtg-ru.po
+++ b/locales/gtg-ru.po
@@ -1,12 +1,16 @@
-#, fuzzy
+# Russian translation for gtg
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the gtg package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: gtg\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-04-01 12:00+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-04-02 06:04+0000\n"
+"Last-Translator: wiz <aenor.realm@gmail.com>\n"
+"Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -15,11 +19,11 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:6
 msgid "Getting started with GTG"
-msgstr ""
+msgstr "Начало работы с GTG"
 
 #: GTG/core/firstrun_tasks.py:7
 msgid "Welcome in Getting Things Gnome!, your new task manager."
-msgstr ""
+msgstr "Добро пожаловать в Getting Things Gnome!, ваш новый планировщик."
 
 #: GTG/core/firstrun_tasks.py:9
 msgid ""
@@ -27,40 +31,50 @@ msgid ""
 "to changing a light bulb or organizing a party. When you edit a task, it is "
 "automatically saved."
 msgstr ""
+"В GTG всё есть задача. От постройки моста через Тихий Океан до смены "
+"лампочки или организации вечеринки. Когда вы редактируете задачу она сразу "
+"же сохраняется."
 
 #: GTG/core/firstrun_tasks.py:11
 msgid ""
 "Once a task is done, you can push the &quot;Mark as done&quot; button. If "
 "the task is not relevant any-more, simply press &quot;Dismiss&quot;."
 msgstr ""
+"Когда задача выполнена, вы можете нажать кнопку &quot;Отметить "
+"выполнение&quot;. Если задача более не актуальна, просто нажмите "
+"&quot;Отменить&quot;."
 
 #: GTG/core/firstrun_tasks.py:13
 msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link :"
 msgstr ""
+"Задача может состоять из нескольких подзадач, которые видны в описании как "
+"ссылки. Просто нажмите на следующей ссылке:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid "Don't forget to mark this subtask as done !"
-msgstr ""
+msgstr "Не забудьте отметить выполнение подзадачи."
 
 #: GTG/core/firstrun_tasks.py:19
 msgid "Other stuff you should read :"
-msgstr ""
+msgstr "Что ещё вам надо почитать:"
 
 #: GTG/core/firstrun_tasks.py:25
 msgid ""
 "We hope that you will appreciate GTG. Please send us bug reports and ideas "
 "for improvement using : "
 msgstr ""
+"Надеемся, что вам понравится GTG. Пожалуйста, отправляйте нам отчёты об "
+"ошибках и идеи используя: "
 
 #: GTG/core/firstrun_tasks.py:28
 msgid "Thank you for trying out GTG :-)"
-msgstr ""
+msgstr "Благодарим за использование GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:33
 msgid "Learn to use subtasks"
-msgstr ""
+msgstr "Научиться использовать подзадачи"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid ""
@@ -69,41 +83,49 @@ msgid ""
 "to be done in order to accomplish your task. Just try to write &quot;- test "
 "subtask&quot; on the next line and press enter."
 msgstr ""
+"В описании задачи (этом окне), вы можете начать строку с &quot;-&quot;, "
+"тогда она будет считаться подзадачей, чем-то что должно быть сделано для "
+"выполнения текущей задачи. Просто попробуйте написать &quot;- проверка "
+"подзадач&quot; на следующей строке и нажмите ввод."
 
 #: GTG/core/firstrun_tasks.py:36
 msgid "You can also use the &quot;insert subtask&quot; button."
-msgstr ""
+msgstr "Также вы можете использовать кнопку &quot;Добавить подзадачу&quot;."
 
 #: GTG/core/firstrun_tasks.py:38
 msgid ""
 "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
 msgstr ""
+"Задачи и подзадачи можно реорганизовать перетаскиванием в списке задач."
 
 #: GTG/core/firstrun_tasks.py:40
 msgid ""
 "Some concept come with subtasks : for example, a subtask due date can never "
 "be after its parent due date."
 msgstr ""
+"Подзадачи имеют связи с родителями. Например, подзадача не может иметь срок "
+"выполнения после срока родительской задачи."
 
 #: GTG/core/firstrun_tasks.py:42
 msgid "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Также, выполнение родительской задачи отметит выполнение всех подзадач."
 
 #: GTG/core/firstrun_tasks.py:47
 msgid "Learn to use tags"
-msgstr ""
+msgstr "Научиться использовать метки"
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "A tag is a simple word that begin with &quot;@&quot;."
-msgstr ""
+msgstr "Метка это простое слово, начинающееся с &quot;@&quot;."
 
 #: GTG/core/firstrun_tasks.py:50
 msgid "Try to type a word beginning with @ here :"
-msgstr ""
+msgstr "Попробуйте написать слово, начинающееся с @ тут:"
 
 #: GTG/core/firstrun_tasks.py:52
 msgid "It becomes yellow, it's a tag."
-msgstr ""
+msgstr "Оно станет жёлтым, это метка"
 
 #: GTG/core/firstrun_tasks.py:54
 msgid ""
@@ -112,6 +134,9 @@ msgid ""
 "tasks for a given tag. There's no limit to the number of tags a task can "
 "have."
 msgstr ""
+"Метки полезны для сортирофки задач. В меню вид, можно включить боковое меню, "
+"которое показывает все использованые метки чтобы показать только задачи по "
+"выбраной метке. Ограничений на количество меток у задачи нет."
 
 #: GTG/core/firstrun_tasks.py:56
 msgid ""
@@ -119,6 +144,8 @@ msgid ""
 "will permit you to have a more colorful list of tasks, if you want it that "
 "way."
 msgstr ""
+"Можно назначить цвет метки, если кликнуть правой кнопкой на метке в боковом "
+"меню. Это позволяет иметь раскрашеный список задач, если вам так нравится."
 
 #: GTG/core/firstrun_tasks.py:58
 msgid ""
@@ -129,37 +156,52 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Новая метка добавляется только к текущей задаче. Она не будет рекурсивно "
+"добавляться всем подзадачам, но когда вы создадите подзадачу, она унаследует "
+"родительские метки. Так же если вы добавите метку родителю, сразу после "
+"создания подзадачи, подзадача тоже получит эту метку. Конечно вы можете в "
+"любое время править метки этой подзадачи и это не повлияет на родительскую."
 
 #: GTG/core/firstrun_tasks.py:63
 msgid "Using the Workview"
-msgstr ""
+msgstr "Использование рабочего плана"
 
 #: GTG/core/firstrun_tasks.py:64
 msgid ""
 "If you press the &quot;Workview&quot; button, only actionable tasks will be "
 "displayed."
 msgstr ""
+"Если вы нажмёте кнопку &quot;рабочий план&quot; будут показаны только "
+"выполнимые задачи."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid ""
 "What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
+"Что такое выполнимые задачи? Это задачи, выполнение которых возможно в "
+"данный момент."
 
 #: GTG/core/firstrun_tasks.py:68
 msgid ""
 "It's a task that is already &quot;start-able&quot;, i.e. the start date is "
 "already over."
 msgstr ""
+"Это задача, которая уже началась. Т.е. дата начала исполнения которой уже "
+"наступила."
 
 #: GTG/core/firstrun_tasks.py:70
 msgid ""
 "It's a task that doesn't have open subtasks, i.e. you can do the task itself "
 "directly."
 msgstr ""
+"Это задача не имеет открытых подзадач. т.е.  вы можете работать "
+"непосредственно по этой задаче."
 
 #: GTG/core/firstrun_tasks.py:72
 msgid "Thus, the workview will only show you tasks you should do right now."
 msgstr ""
+"Поэтому рабочий план показывает задачи, которыми вы должны заниматься прямо "
+"сейчас."
 
 #: GTG/core/firstrun_tasks.py:74
 msgid ""
@@ -168,93 +210,106 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Если вы используете метки, вы можете кликнуть правой кнопкой на метке в "
+"боковом меню и указать, что задачи с такой меткой не надо показывать в "
+"рабочем плане. Это очень полезно если у вас есть метка вроде &quot;когда "
+"нибудь&quot; для задач, которые вы собираетесь сделать, но они не особо "
+"важные."
 
 #: GTG/core/firstrun_tasks.py:80
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Сообщайте об ошибках"
 
 #: GTG/core/firstrun_tasks.py:81
 msgid ""
 "GTG is still very alpha software. We like it and use it everyday but you "
 "will encounter some bugs."
 msgstr ""
+"GTG всё ещё очень сырая программа. Мы бы хотели чтобы вы ей пользовались "
+"каждый день, но вы можете столкнуться с разными ошибками."
 
 #: GTG/core/firstrun_tasks.py:83
 msgid ""
 "Please, report them ! We need you to make this software better. Any "
 "contribution, any idea is welcome."
 msgstr ""
+"Пожалуйста, сообщайте о них! Мы нуждаемся в этом чтобы сделать нашу "
+"программу лучше. Будем благодарны за любой вклад, любую идею."
 
 #: GTG/core/firstrun_tasks.py:85
 msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"Если у вас есть проблемы с GTG мы можем помочь или исправить ошибку весьма "
+"быстро."
 
 #: GTG/taskeditor/editor.py:208
 msgid "Due tomorrow !"
-msgstr ""
+msgstr "К завтра!"
 
 #: GTG/taskeditor/editor.py:210
 #, python-format
 msgid "%s days left"
-msgstr ""
+msgstr "осталось дней: %s"
 
 #: GTG/taskeditor/editor.py:212
 msgid "Due today !"
-msgstr ""
+msgstr "Сегодня!"
 
 #: GTG/taskeditor/editor.py:214
 msgid "Due for yesterday"
-msgstr ""
+msgstr "До послезавтра"
 
 #: GTG/taskeditor/editor.py:216
 #, python-format
 msgid "Was %s days ago"
-msgstr ""
+msgstr "просрочено дней: %s"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "<span weight=\"bold\">Due for</span>"
-msgstr ""
+msgstr "Дата завершения"
 
 #: GTG/taskeditor/taskeditor.glade.h:2
 msgid "<span weight=\"bold\">Starting on</span>"
-msgstr ""
+msgstr "Дата начала"
 
 #: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
 msgid "Delete"
-msgstr ""
+msgstr "Удалить"
 
 #: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/taskbrowser.glade.h:13
 #: GTG/taskbrowser/__init__.py:31
 msgid "Dismiss"
-msgstr ""
+msgstr "Отменить задачу"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
-msgstr ""
+msgstr "Вставить подзадачу"
 
 #: GTG/taskeditor/taskeditor.glade.h:6
 msgid "Insert tag"
-msgstr ""
+msgstr "Вставить метку"
 
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Keep as Note"
-msgstr ""
+msgstr "Хранить как примечание"
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr ""
+msgstr "Отметить как выполненное"
 
 #: GTG/taskeditor/taskeditor.glade.h:9
 msgid "Task"
-msgstr ""
+msgstr "Задача"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
 "\n"
 "Getting Things Gnome! is an organizer for the GNOME desktop environment."
 msgstr ""
+"\n"
+"Getting Things Gnome! - это органайзер для GNOME."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
@@ -263,42 +318,46 @@ msgid ""
 "\n"
 "Deleting a task cannot be undone."
 msgstr ""
+"<span weight=\"bold\" size=\"large\">Вы уверены, что хотите удалить эту "
+"задачу?</span>\n"
+"\n"
+"Удаленную задачу нельзя восстановить."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "About GTG!"
-msgstr ""
+msgstr "Про GTG!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Choose a color"
-msgstr ""
+msgstr "Выбрать цвет"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:8
 msgid "Confirm task deletion"
-msgstr ""
+msgstr "Подтвердите удаление задачи"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:9
 msgid "Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Авторские права © 2008, 2009 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:10 GTG/taskbrowser/browser.py:110
 msgid "Create a new task"
-msgstr ""
+msgstr "Создать задачу"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
-msgstr ""
+msgstr "_Отменить"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
 msgid "Edit"
-msgstr ""
+msgstr "Правка"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:15
 msgid "GTG website"
-msgstr ""
+msgstr "Веб-сайт GTG"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:16
 msgid "Getting Things Gnome!"
-msgstr ""
+msgstr "Getting Things Gnome!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:17
 msgid ""
@@ -316,240 +375,252 @@ msgid ""
 "Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things Gnome! это свободное програмное обеспечение; Вы можете "
+"распространять его и/или изменять его в соответствии с лицензией GNU "
+"опубликованной Фондом Свободного Программного обеспечения, версии лицензии "
+"3, либо (по вашему выбору) любой более поздней версии.\n"
+"Getting Things Gnome! распространяется в надежде, что она будет полезной, но "
+"БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ, даже без подразумеваемых гарантий КОММЕРЧЕСКОЙ "
+"ЦЕННОСТИ или ПРИГОДНОСТИ ДЛЯ ОПРЕДЕЛЕННОЙ ЦЕЛИ. Обратитесь к лицензии GNU за "
+"более подробной информацией.\n"
+"Вы должны были получить копию лицензии GNU наряду с получением Getting "
+"Things Gnome!, если это не так, напишите в Фонд Свободного Программного "
+"Обеспецения, улица Franklin 51, пятый этаж, Бостон,  Массачусетс, 02110-"
+"1301, США."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:22
 msgid "Mark as Done"
-msgstr ""
+msgstr "Отметить как выполненное"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:23
 msgid "Mark as Not Done"
-msgstr ""
+msgstr "Отметить как невыполненое"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:24
 msgid "Mark as _Done"
-msgstr ""
+msgstr "Отметить как _выполненое"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:25
 msgid "New Note"
-msgstr ""
+msgstr "Новая заметка"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:26
 msgid "New Subtask"
-msgstr ""
+msgstr "Новая подзадача"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:27
 msgid "New Task"
-msgstr ""
+msgstr "Новая задача"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "New _Subtask"
-msgstr ""
+msgstr "Новая _подзадача"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:29
 msgid "New _Task"
-msgstr ""
+msgstr "Новая _задача"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:30
 msgid "Permanently _remove task"
-msgstr ""
+msgstr "_Удалить задачу"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:31
 msgid "Redo"
-msgstr ""
+msgstr "Повторить"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:32
 msgid "Tag is displayed in the workview"
-msgstr ""
+msgstr "Метка отображается в workview"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:33 GTG/taskbrowser/browser.py:1477
 #: GTG/taskbrowser/browser.py:1548
 msgid "Tags"
-msgstr ""
+msgstr "Метки"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:34
 msgid "Und_ismiss"
-msgstr ""
+msgstr "Ве_рнуть"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:35
 msgid "Undo"
-msgstr ""
+msgstr "Отмена"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:36
 msgid "View Notes"
-msgstr ""
+msgstr "Просмотреть примечания"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:37
 msgid "Work View"
-msgstr ""
+msgstr "Рабочий вид"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:38
 msgid "_Background Colors"
-msgstr ""
+msgstr "Фоновые цвета"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:39
 msgid "_Closed Tasks Pane"
-msgstr ""
+msgstr "Панель _закрытых задач"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:40
 msgid "_Edit"
-msgstr ""
+msgstr "_Правка"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:41
 msgid "_File"
-msgstr ""
+msgstr "_Файл"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:42
 msgid "_Help"
-msgstr ""
+msgstr "_Справка"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Keep selected task"
-msgstr ""
+msgstr "_Оставить задачу"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:44
 msgid "_Quick Add Entry"
-msgstr ""
+msgstr "Быстро добавить запись"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:45
 msgid "_Tags Sidebar"
-msgstr ""
+msgstr "Боковая панель меток"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:46
 msgid "_Tasks"
-msgstr ""
+msgstr "_Задачи"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:47
 msgid "_View"
-msgstr ""
+msgstr "_Вид"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
 msgid "_Work View"
-msgstr ""
+msgstr "_Рабочий вид"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
 msgid "gtk-add"
-msgstr ""
+msgstr "gtk-add"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:50
 msgid "gtk-cancel"
-msgstr ""
+msgstr "gtk-cancel"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:51
 msgid "gtk-help"
-msgstr ""
+msgstr "gtk-help"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:52
 msgid "gtk-ok"
-msgstr ""
+msgstr "gtk-ok"
 
 #: GTG/taskbrowser/browser.py:107
 msgid "Mark the selected task as done"
-msgstr ""
+msgstr "Сделать выбранную задачу выполненной"
 
 #: GTG/taskbrowser/browser.py:108
 msgid "Edit the selected task"
-msgstr ""
+msgstr "Править задачу"
 
 #: GTG/taskbrowser/browser.py:109
 msgid "Dismiss the selected task"
-msgstr ""
+msgstr "Отменить выбранную задачу"
 
 #: GTG/taskbrowser/browser.py:111
 msgid "Create a new subtask"
-msgstr ""
+msgstr "Создать новую подзадачу"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "monday"
-msgstr ""
+msgstr "понедельник"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "tuesday"
-msgstr ""
+msgstr "вторник"
 
 #: GTG/taskbrowser/browser.py:552
 msgid "wednesday"
-msgstr ""
+msgstr "среда"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "thursday"
-msgstr ""
+msgstr "четверг"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "friday"
-msgstr ""
+msgstr "пятница"
 
 #: GTG/taskbrowser/browser.py:553
 msgid "saturday"
-msgstr ""
+msgstr "суббота"
 
 #: GTG/taskbrowser/browser.py:554
 msgid "sunday"
-msgstr ""
+msgstr "воскресенье"
 
 #: GTG/taskbrowser/browser.py:563
 msgid "today"
-msgstr ""
+msgstr "сегодня"
 
 #: GTG/taskbrowser/browser.py:570
 msgid "tomorrow"
-msgstr ""
+msgstr "завтра"
 
 #: GTG/taskbrowser/browser.py:631
 msgid "tags"
-msgstr ""
+msgstr "метки"
 
 #: GTG/taskbrowser/browser.py:634
 msgid "defer"
-msgstr ""
+msgstr "отложить"
 
 #: GTG/taskbrowser/browser.py:638
 msgid "due"
-msgstr ""
+msgstr "до"
 
 #: GTG/taskbrowser/browser.py:749
 msgid "<span weight=\"bold\">All tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Все метки</span>"
 
 #: GTG/taskbrowser/browser.py:750
 msgid "<span weight=\"bold\">Tasks without tags</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Задачи без меток</span>"
 
 #: GTG/taskbrowser/browser.py:845
 msgid "(no active tasks)"
-msgstr ""
+msgstr "(нет задач)"
 
 #: GTG/taskbrowser/browser.py:847
 msgid "(1 active task)"
-msgstr ""
+msgstr "(1 задача)"
 
 #: GTG/taskbrowser/browser.py:1492 GTG/taskbrowser/browser.py:1575
 msgid "Title"
-msgstr ""
+msgstr "Заголовок"
 
 #: GTG/taskbrowser/browser.py:1511
 msgid "Due date"
-msgstr ""
+msgstr "Срок выполнения"
 
 #: GTG/taskbrowser/browser.py:1525
 msgid "Days left"
-msgstr ""
+msgstr "Осталось дней"
 
 #: GTG/taskbrowser/browser.py:1563
 msgid "Closing date"
-msgstr ""
+msgstr "Дата закрытия"
 
 #: GTG/taskbrowser/browser.py:1591
 msgid "Notes"
-msgstr ""
+msgstr "Заметки"
 
 #: GTG/taskbrowser/__init__.py:29
 msgid "Mark as done"
-msgstr ""
+msgstr "Отметить выполнение"
 
 #: GTG/taskbrowser/__init__.py:30
 msgid "Mark as not done"
-msgstr ""
+msgstr "Отменить выполнение"
 
 #: GTG/taskbrowser/__init__.py:32
 msgid "Undismiss"
-msgstr ""
+msgstr "Восстановить"
